--- a/index.html
+++ b/index.html
@@ -31,6 +31,21 @@
         </section>
     </div>
 
+    <div>
+        <header>
+            <h1>Vamos contar</h1>
+        </header>
+        <section>
+            <div id="dados">
+                <p>Início: <input type="number" name="initial" id="initialNumber" /></p>
+                <p>Final: <input type="number" name="last" id="lastNumber" /></p>
+                <p>Passo: <input type="number" name="step" id="step" /></p>
+                <input type="button" name="count" value="Contar" onclick="count()" />
+            </div>
+            <div id="counterResult">Preparando a contagem...</div>
+        </section>
+    </div>
+
     <footer>
         <p>&copy; VitoriaCaminha</p>
     </footer>
