--- a/index.html
+++ b/index.html
@@ -69,6 +69,29 @@
         </section>
     </div>
 
+    <div>
+        <h2>Verificador de Idade</h2>
+        <section>
+            <div>
+                <p>
+                    Ano de nascimento:
+                    <input type="number" name="year" id="verifyYear" min="0" />
+                </p>
+                <p>
+                    Sexo:
+                    <input type="radio" name="radsex" id="masc" checked />
+                    <label for="masc">Masculino</label>
+                    <input type="radio" name="radsex" id="fem" />
+                    <label for="fem">Feminino</label>
+                </p>
+                <p>
+                    <input type="button" value="Verificar" onclick="verify()" />
+                </p>
+            </div>
+            <div id="verifyResult">Preencha os dados para ver o resultado!</div>
+        </section>
+    </div>
+
     <footer>
         <p>&copy; VitoriaCaminha</p>
     </footer>
